# 4011-WeatherStation

./: 4011 - Gunnar-Green Poster.pptx  CSSE4011 - Gunnar-Green Poster.pptx  README.md  project.py
oslib/bt_base_multi/: bt_base_multi.c  bt_base_multi.h
oslib/bt_station/: bt_station.c  bt_station.h
oslib/weather_station/thingy52_sensors/: thingy52_sensors.c  thingy52_sensors.h
project/: project.py
project/base/: CMakeLists.txt  bt.conf  shell.conf  usb.conf
project/base/src/: main.c
project/weather_station/: CMakeLists.txt  prj.conf
project/weather_station/src/: main.c
